<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"


    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:id ="@+id/University"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="DuplicateIds"
            android:layout_column="1"
            >

            <ImageView
                android:id="@+id/UniversityImage"
                android:layout_width="match_parent"
                android:layout_height="258dp"
                app:srcCompat="@drawable/university" />

            <TextView
                android:id="@+id/UniversityText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/University" />

            <TextView
                android:id="@+id/University_Rating"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/university_rating" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Station"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="DuplicateIds"
            android:layout_column="2"

            >

            <ImageView
                android:id="@+id/StationIamge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/station" />

            <TextView
                android:id="@+id/StationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Station" />

            <TextView
                android:id="@+id/stationRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/station_rating" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/Hall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="DuplicateIds"
            android:layout_column="1"
            >


            <ImageView
                android:id="@+id/HallImage"
                android:layout_width="220dp"
                android:layout_height="190dp"
                app:srcCompat="@drawable/hall" />

            <TextView
                android:id="@+id/HallText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Hall" />

            <TextView
                android:id="@+id/HallRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hall_rating" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Garden"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="DuplicateIds"
            >

            <ImageView
                android:id="@+id/GardenImage"
                android:layout_width="194dp"
                android:layout_height="187dp"
                app:srcCompat="@drawable/garden" />

            <TextView
                android:id="@+id/GardenText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Garden" />

            <TextView
                android:id="@+id/GardenRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/garden_rating" />
        </LinearLayout>


    </TableRow>
</TableLayout>
